Closed Bug 747759 Opened 12 years ago Closed 12 years ago

Missing break statement in AndroidJavaWrappers.cpp

Categories

(Firefox for Android Graveyard :: General, defect)

All
Android
defect
Not set
normal

Tracking

(firefox14 fixed, blocking-fennec1.0 +)

RESOLVED FIXED
Firefox 14
Tracking Status
firefox14 --- fixed
blocking-fennec1.0 --- +

People

(Reporter: kats, Assigned: kats)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
      No description provided.
Attachment #617321 - Flags: review?(blassey.bugs)
Attachment #617321 - Flags: review?(blassey.bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/ee30e2a91e10
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
blocking-fennec1.0: ? → +
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: