Bug 747759 - Insert missing break statement. r=blassey a=blassey